[package]
name = "nats-priority-example"
version = "0.1.0"
edition = "2021"

[dependencies]
apalis = { path = "../../", features = ["limit"] }
apalis-nats = { path = "../../packages/apalis-nats" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }
