[package]
name = "nats-example"
version = "0.1.0"
edition.workspace = true

[dependencies]
apalis = { path = "../../", features = ["tracing", "limit"] }
apalis-nats = { path = "../../packages/apalis-nats" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
chrono = { version = "0.4", features = ["serde"] }
async-nats = "0.35"

# OpenTelemetry dependencies (optional)
opentelemetry = { version = "0.25", optional = true }
opentelemetry-otlp = { version = "0.25", optional = true }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio-current-thread"], optional = true }
tracing-opentelemetry = { version = "0.27", optional = true }

[features]
default = []
otel = [
    "apalis-nats/otel",
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]